--- a/projects/nuc-243-rte/nuc-243-rte.cbp
+++ b/projects/nuc-243-rte/nuc-243-rte.cbp
@@ -42,13 +42,15 @@
 			<Add option="-DSTM32F2" />
 			<Add option="-DNDEBUG" />
 			<Add directory="../../src" />
+			<Add directory="../../src/bsp/common/stm32" />
+			<Add directory="../../src/bsp/common/stm32/f2" />
+			<Add directory="../../src/bsp/common/stm32/f2/fmb_port" />
 			<Add directory="../../src/bsp/nuc-243" />
 			<Add directory="../../../libopencm3/include" />
 			<Add directory="../../../matiec/lib/C" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/include" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/rtu" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/ascii" />
-			<Add directory="../../src/bsp/nuc-243/fmb_port" />
 		</Compiler>
 		<Linker>
 			<Add option="-mthumb" />
@@ -67,56 +69,60 @@
 		<Unit filename="../../src/COPYING.GPL3" />
 		<Unit filename="../../src/COPYING.LGPL3" />
 		<Unit filename="../../src/License.txt" />
-		<Unit filename="../../src/bsp/nuc-243/fmb_port/port.h" />
-		<Unit filename="../../src/bsp/nuc-243/fmb_port/portevent.c">
+		<Unit filename="../../src/bsp/common/plc_mbs.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/fmb_port/portother.c">
+		<Unit filename="../../src/bsp/common/plc_tick.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/fmb_port/portserial.c">
+		<Unit filename="../../src/bsp/common/stm32/f2/fmb_port/port.h" />
+		<Unit filename="../../src/bsp/common/stm32/f2/fmb_port/portevent.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/fmb_port/porttimer.c">
+		<Unit filename="../../src/bsp/common/stm32/f2/fmb_port/portother.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/fmb_port/portserial.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/fmb_port/porttimer.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/mbconfig.h" />
+		<Unit filename="../../src/bsp/common/stm32/f2/plc_backup.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/plc_clock.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/plc_gpio.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/plc_isr_stubs.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/plc_rtc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/plc_serial.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/plc_gpio.h" />
+		<Unit filename="../../src/bsp/common/stm32/plc_hmi.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-243/hmi_7seg_conf.h" />
-		<Unit filename="../../src/bsp/nuc-243/mbconfig.h" />
 		<Unit filename="../../src/bsp/nuc-243/menu_api.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_backup.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_clock.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-243/plc_config.h" />
 		<Unit filename="../../src/bsp/nuc-243/plc_diag.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_hmi.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="../../src/bsp/nuc-243/plc_hw.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-243/plc_iom_reg.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_isr_stubs.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_mb.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_rtc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_serial.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_tick.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-243/plc_wait_tmr.c">
