--- a/projects/nuc-242-rte/nuc-242-ret.cbp
+++ b/projects/nuc-242-rte/nuc-242-ret.cbp
@@ -46,13 +46,13 @@
 			<Add option="-DNDEBUG" />
 			<Add directory="../../src" />
 			<Add directory="../../src/bsp/nuc-242" />
+			<Add directory="../../src/bsp/common/stm32" />
+			<Add directory="../../src/bsp/common/stm32/f1/fmb_port" />
 			<Add directory="../../../libopencm3/include" />
 			<Add directory="../../../matiec/lib/C" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/include" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/rtu" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/ascii" />
-			<Add directory="../../src/bsp/nuc-242/fmb_port" />
-			<Add directory="../../src/bsp/common/stm32" />
 		</Compiler>
 		<Linker>
 			<Add option="-mthumb" />
@@ -71,35 +71,49 @@
 		<Unit filename="../../src/COPYING.GPL3" />
 		<Unit filename="../../src/COPYING.LGPL3" />
 		<Unit filename="../../src/License.txt" />
+		<Unit filename="../../src/bsp/common/plc_mbs.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../../src/bsp/common/plc_tick.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/port.h" />
+		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/portevent.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/portother.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/portserial.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/porttimer.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/mbconfig.h" />
+		<Unit filename="../../src/bsp/common/stm32/f1/plc_backup.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/plc_clock.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/common/stm32/f1/plc_gpio.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/plc_rtc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/plc_serial.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../../src/bsp/common/stm32/plc_diag.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/plc_wait_tmr.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../../src/bsp/nuc-242/fmb_port/port.h" />
-		<Unit filename="../../src/bsp/nuc-242/fmb_port/portevent.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/fmb_port/portother.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/fmb_port/portserial.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/fmb_port/porttimer.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="../../src/bsp/nuc-242/mbconfig.h" />
-		<Unit filename="../../src/bsp/nuc-242/plc_backup.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/plc_clock.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="../../src/bsp/nuc-242/plc_config.h" />
 		<Unit filename="../../src/bsp/nuc-242/plc_hmi.c">
 			<Option compilerVar="CC" />
@@ -111,18 +125,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-242/plc_isr_stubs.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/plc_mb.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/plc_rtc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/plc_serial.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-242/plc_wait_tmr.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/dbnc_flt.c">
