--- a/projects/nuc-247-0-rte/nuc-247-0-rte.cbp
+++ b/projects/nuc-247-0-rte/nuc-247-0-rte.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="nuc-243-rte" />
+		<Option title="nuc-247-0-rte" />
 		<Option pch_mode="2" />
 		<Option compiler="armnoneeabigcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/nuc-243-rte.elf" prefix_auto="1" extension_auto="0" />
+				<Option output="bin/Debug/nuc-247-0-rte.elf" prefix_auto="1" extension_auto="0" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="armnoneeabigcc" />
@@ -18,7 +18,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/nuc-243-rte.elf" prefix_auto="1" extension_auto="0" />
+				<Option output="bin/Release/nuc-247-0-rte.elf" prefix_auto="1" extension_auto="0" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="armnoneeabigcc" />
@@ -45,7 +45,7 @@
 			<Add directory="../../src/bsp/common/stm32" />
 			<Add directory="../../src/bsp/common/stm32/f2" />
 			<Add directory="../../src/bsp/common/stm32/f2/fmb_port" />
-			<Add directory="../../src/bsp/nuc-243" />
+			<Add directory="../../src/bsp/nuc-247-0" />
 			<Add directory="../../../libopencm3/include" />
 			<Add directory="../../../matiec/lib/C" />
 			<Add directory="../../../freemodbus-v1.5.0/modbus/include" />
@@ -59,7 +59,7 @@
 			<Add option="-Xlinker" />
 			<Add option='-Map=&quot;${TARGET_OUTPUT_FILE}&quot;.map' />
 			<Add option="-Wl,--gc-sections,-lgcc" />
-			<Add option='-T &quot;../../src/bsp/nuc-243/stm32f205xC-rte.ld&quot;' />
+			<Add option='-T &quot;../../src/bsp/nuc-247-0/stm32f205xC-rte.ld&quot;' />
 			<Add library="../../../libopencm3/lib/libopencm3_stm32f2.a" />
 		</Linker>
 		<ExtraCommands>
@@ -115,21 +115,20 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/common/stm32/plc_hmi.h" />
-		<Unit filename="../../src/bsp/nuc-243/hmi_7seg_conf.h" />
-		<Unit filename="../../src/bsp/nuc-243/plc_config.h" />
-		<Unit filename="../../src/bsp/nuc-243/plc_hmi_sys.c">
+		<Unit filename="../../src/bsp/nuc-247-0/plc_config.h" />
+		<Unit filename="../../src/bsp/nuc-247-0/plc_hmi_sys.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_hw.c">
+		<Unit filename="../../src/bsp/nuc-247-0/plc_hw.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_iom_reg.c">
+		<Unit filename="../../src/bsp/nuc-247-0/plc_iom_reg.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/plc_wait_tmr.c">
+		<Unit filename="../../src/bsp/nuc-247-0/plc_wait_tmr.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-243/stm32f205xC-rte.ld" />
+		<Unit filename="../../src/bsp/nuc-247-0/stm32f205xC-rte.ld" />
 		<Unit filename="../../src/dbnc_flt.c">
 			<Option compilerVar="CC" />
 		</Unit>
