--- a/projects/yaplc-runtime/yaplc-runtime.cbp
+++ b/projects/yaplc-runtime/yaplc-runtime.cbp
@@ -44,6 +44,9 @@
 			<Add directory="../../src/bsp/nuc-227-dev" />
 			<Add directory="../../../libopencm3/include" />
 			<Add directory="../../../matiec/lib/C" />
+			<Add directory="../../src/bsp/common" />
+			<Add directory="../../src/bsp/common/stm32" />
+			<Add directory="../../src/bsp/common/stm32/f4" />
 		</Compiler>
 		<Linker>
 			<Add option="-mthumb" />
@@ -64,27 +67,37 @@
 		<Unit filename="../../src/COPYING.GPL3" />
 		<Unit filename="../../src/COPYING.LGPL3" />
 		<Unit filename="../../src/License.txt" />
-		<Unit filename="../../src/bsp/nuc-227-dev/plc_backup.c">
+		<Unit filename="../../src/bsp/common/plc_tick.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/nuc-227-dev/plc_clock.c">
+		<Unit filename="../../src/bsp/common/stm32/f4/plc_backup.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f4/plc_clock.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f4/plc_gpio.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f4/plc_isr_stubs.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f4/plc_rtc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f4/plc_serial.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/plc_diag.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/plc_gpio.h" />
+		<Unit filename="../../src/bsp/common/stm32/plc_wait_tmr.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-227-dev/plc_config.h" />
 		<Unit filename="../../src/bsp/nuc-227-dev/plc_config_bak.h" />
 		<Unit filename="../../src/bsp/nuc-227-dev/plc_hw.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-227-dev/plc_rtc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-227-dev/plc_serial.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-227-dev/plc_tick.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../src/bsp/nuc-227-dev/plc_wait_tmr.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/nuc-227-dev/stm32f4disco-rte.ld" />
@@ -110,6 +123,7 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/plc_dbg.h" />
+		<Unit filename="../../src/plc_diag.h" />
 		<Unit filename="../../src/plc_glue_dbg.h" />
 		<Unit filename="../../src/plc_glue_rte.c">
 			<Option compilerVar="CC" />
