--- a/projects/nuc-243-rte/nuc-243-rte.cbp
+++ b/projects/nuc-243-rte/nuc-243-rte.cbp
@@ -41,6 +41,7 @@
 			<Add option="-fdata-sections" />
 			<Add option="-DSTM32F2" />
 			<Add option="-DNDEBUG" />
+			<Add option="-DNOISE_FLT_BUFSZ=128" />
 			<Add directory="../../src" />
 			<Add directory="../../src/bsp/common/stm32" />
 			<Add directory="../../src/bsp/common/stm32/f2" />
@@ -73,6 +74,13 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/common/plc_tick.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/ADC/adc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f2/ADC/adc.h" />
+		<Unit filename="../../src/bsp/common/stm32/f2/ADC/adc_common_v1.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/common/stm32/f2/fmb_port/port.h" />
@@ -116,6 +124,14 @@
 		</Unit>
 		<Unit filename="../../src/bsp/common/stm32/plc_hmi.h" />
 		<Unit filename="../../src/bsp/nuc-243/hmi_7seg_conf.h" />
+		<Unit filename="../../src/bsp/nuc-243/plc_ain.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/nuc-243/plc_ain.h" />
+		<Unit filename="../../src/bsp/nuc-243/plc_aout.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/bsp/nuc-243/plc_aout.h" />
 		<Unit filename="../../src/bsp/nuc-243/plc_config.h" />
 		<Unit filename="../../src/bsp/nuc-243/plc_hmi_sys.c">
 			<Option compilerVar="CC" />
@@ -141,6 +157,10 @@
 		<Unit filename="../../src/main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../src/noise_flt.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/noise_flt.h" />
 		<Unit filename="../../src/plc_abi.h" />
 		<Unit filename="../../src/plc_app_default.c">
 			<Option compilerVar="CC" />
