--- a/projects/nuc-242-rte/nuc-242-rte.cbp
+++ b/projects/nuc-242-rte/nuc-242-rte.cbp
@@ -35,8 +35,8 @@
 		<Compiler>
 			<Add option="-mthumb" />
 			<Add option="-Os" />
-			<Add option="-std=gnu90" />
 			<Add option="-mcpu=cortex-m3" />
+			<Add option="-std=gnu90" />
 			<Add option="-fmessage-length=0" />
 			<Add option="-fno-builtin" />
 			<Add option="-fno-strict-aliasing" />
@@ -47,12 +47,14 @@
 			<Add directory="../../src" />
 			<Add directory="../../src/bsp/nuc-242" />
 			<Add directory="../../src/bsp/common/stm32" />
-			<Add directory="../../src/bsp/common/stm32/f1/fmb_port" />
+			<Add directory="../../src/bsp/common/stm32/f1/libremodbus_port" />
 			<Add directory="../../../libopencm3/include" />
 			<Add directory="../../../matiec/lib/C" />
-			<Add directory="../../../freemodbus-v1.5.0/modbus/include" />
-			<Add directory="../../../freemodbus-v1.5.0/modbus/rtu" />
-			<Add directory="../../../freemodbus-v1.5.0/modbus/ascii" />
+			<Add directory="../../../libremodbus/include" />
+			<Add directory="../../../libremodbus/rtu" />
+			<Add directory="../../../libremodbus/ascii" />
+			<Add directory="../../../libremodbus/" />
+			<Add directory="../../src/bsp/common/stm32/f1" />
 		</Compiler>
 		<Linker>
 			<Add option="-mthumb" />
@@ -66,30 +68,31 @@
 		</Linker>
 		<ExtraCommands>
 			<Add after="arm-none-eabi-size ${TARGET_OUTPUT_FILE}" />
+			<Add after="arm-none-eabi-objcopy -O ihex ${TARGET_OUTPUT_FILE} ${TARGET_OUTPUT_FILE}.hex" />
 			<Mode after="always" />
 		</ExtraCommands>
 		<Unit filename="../../src/COPYING.GPL3" />
 		<Unit filename="../../src/COPYING.LGPL3" />
 		<Unit filename="../../src/License.txt" />
-		<Unit filename="../../src/bsp/common/plc_mbs.c">
+		<Unit filename="../../src/bsp/common/plc_mbs_single.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/bsp/common/plc_tick.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/port.h" />
-		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/portevent.c">
+		<Unit filename="../../src/bsp/common/stm32/f1/libremodbus_port/portevent.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/portother.c">
+		<Unit filename="../../src/bsp/common/stm32/f1/libremodbus_port/portother.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/portserial.c">
+		<Unit filename="../../src/bsp/common/stm32/f1/libremodbus_port/portserial.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/bsp/common/stm32/f1/fmb_port/porttimer.c">
+		<Unit filename="../../src/bsp/common/stm32/f1/libremodbus_port/porttimer.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../src/bsp/common/stm32/f1/libremodbus_port/serial_port.h" />
 		<Unit filename="../../src/bsp/common/stm32/f1/mbconfig.h" />
 		<Unit filename="../../src/bsp/common/stm32/f1/plc_backup.c">
 			<Option compilerVar="CC" />
@@ -166,49 +169,54 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../src/xprintf.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/ascii/mbascii.c">
+		<Unit filename="../../../libremodbus/ascii/ascii_multiport.h" />
+		<Unit filename="../../../libremodbus/ascii/mbascii.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/ascii/mbascii.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbfunccoils.c">
+		<Unit filename="../../../libremodbus/ascii/mbascii.h" />
+		<Unit filename="../../../libremodbus/functions/mbfunccoils.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbfuncdiag.c">
+		<Unit filename="../../../libremodbus/functions/mbfuncdiag.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbfuncdisc.c">
+		<Unit filename="../../../libremodbus/functions/mbfuncdisc.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbfuncholding.c">
+		<Unit filename="../../../libremodbus/functions/mbfuncholding.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbfuncinput.c">
+		<Unit filename="../../../libremodbus/functions/mbfuncinput.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbfuncother.c">
+		<Unit filename="../../../libremodbus/functions/mbfuncother.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/functions/mbutils.c">
+		<Unit filename="../../../libremodbus/functions/mbutils.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mb.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mbconfig.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mbframe.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mbfunc.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mbport.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mbproto.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/include/mbutils.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/mb.c">
+		<Unit filename="../../../libremodbus/include/mb.h" />
+		<Unit filename="../../../libremodbus/include/mb_types.h" />
+		<Unit filename="../../../libremodbus/include/mbconfig_default.h" />
+		<Unit filename="../../../libremodbus/include/mbframe.h" />
+		<Unit filename="../../../libremodbus/include/mbfunc.h" />
+		<Unit filename="../../../libremodbus/include/mbport.h" />
+		<Unit filename="../../../libremodbus/include/mbproto.h" />
+		<Unit filename="../../../libremodbus/include/mbutils.h" />
+		<Unit filename="../../../libremodbus/mb.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/rtu/mbcrc.c">
+		<Unit filename="../../../libremodbus/mb_master.h" />
+		<Unit filename="../../../libremodbus/mb_multiport.h" />
+		<Unit filename="../../../libremodbus/rtu/mbcrc.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/rtu/mbcrc.h" />
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/rtu/mbrtu.c">
+		<Unit filename="../../../libremodbus/rtu/mbcrc.h" />
+		<Unit filename="../../../libremodbus/rtu/mbrtu.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../../freemodbus-v1.5.0/modbus/rtu/mbrtu.h" />
+		<Unit filename="../../../libremodbus/rtu/mbrtu.h" />
+		<Unit filename="../../../libremodbus/rtu/rtu_multiport.h" />
 		<Extensions>
 			<envvars />
 			<code_completion />
