Enabled extra warnings, cleaned the code. TODO: test firmwares.

--- a/projects/nuc-242-rte/nuc-242-rte.cbp
+++ b/projects/nuc-242-rte/nuc-242-rte.cbp
@@ -33,9 +33,11 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-mcpu=cortex-m3" />
 			<Add option="-mthumb" />
 			<Add option="-Os" />
-			<Add option="-mcpu=cortex-m3" />
+			<Add option="-Wextra" />
+			<Add option="-Wall" />
 			<Add option="-std=gnu90" />
 			<Add option="-fmessage-length=0" />
 			<Add option="-fno-builtin" />
