--- a/projects/nuc-247-0-rte/nuc-247-0-rte.cbp
+++ b/projects/nuc-247-0-rte/nuc-247-0-rte.cbp
@@ -31,8 +31,10 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-mthumb" />
 			<Add option="-mcpu=cortex-m3" />
+			<Add option="-mthumb" />
+			<Add option="-Wextra" />
+			<Add option="-Wall" />
 			<Add option="-std=gnu90" />
 			<Add option="-fmessage-length=0" />
 			<Add option="-fno-builtin" />
